[package]
description = "This is a QT example application write by Rust."
edition = "2021"
name = "qt-example"
version = "0.1.0"

# [lib]
# crate-type = ["staticlib"]

[dependencies]
env_logger = "0.8.4"
log = "0.4.0"

## QT
cstr = "0.2.11"
qmetaobject = {version = "0.2.9", features = ["webengine"]}

## Base
anyhow = "1.0.71"
arc-swap = "1.6.0"
async-trait = "0.1.68"
base64 = "0.21.2"
futures = "0.3.28"
once_cell = "1.18.0"
rand = "0.8.5"
rust-i18n = "2"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full", "tracing"]}
tracing = {version = "0.1.37", features = ["log"]}

[build-dependencies]
cpp_build = "0.5"

[package.metadata.bundle]
category = "Developer Tool"
# icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
identifier = "com.huacnlee.qt-example"
name = "QT Example"
osx_frameworks = ["/opt/homebrew/lib/QtGui.framework"]
osx_url_schemes = ["com.huacnlee.qt-example"]
resources = ["resources"]
short_description = "An example application."
version = "1.0.0"
