[package]
edition = "2021"
name = "qt-example"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]

[dependencies]

## QT
cxx = "1"
cxx-qt = "0"
cxx-qt-lib = "0.5.3"

## Base
anyhow = "1.0.71"
arc-swap = "1.6.0"
async-trait = "0.1.68"
base64 = "0.21.2"
futures = "0.3.28"
once_cell = "1.18.0"
rand = "0.8.5"
rust-i18n = "2"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full", "tracing"]}
tracing = {version = "0.1.37", features = ["log"]}

[build-dependencies]
cxx-qt-build = "0"
